[package]
name = "project-dark"
version = "0.1.1-alpha"
authors = ["Daniihh <danielc030417@gmail.com>"]
edition = "2018"

[dependencies]
pyo3 = "0.9.0-alpha.1"

# [lib]
# name = "hyper_py"
# path = "src/backend/lib.rs"
# crate-type = ["dylib"]

[[bin]]
name = "server_start"
path = "src/backend/main.rs"
